welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:30: error: type mismatch;
 found   : Unit
 required: Boolean
  recule()
        ^